src/test/parse-fail/use-ends-with-mod-sep.rs
// compile-flags: -Z parse-only

use std::any::; //~ ERROR expected identifier, found `;`
